--- a/wrangler.toml
+++ b/wrangler.toml
@@ -49,3 +49,8 @@ compatibility_date = "2023-10-02"
 # [[migrations]]
 # tag = "v1"
 # new_classes = ["MyDurableObject"]
+
+[[d1_databases]]
+binding = "DB" # i.e. available in your Worker on env.DB
+database_name = "worldcup-archives"
+database_id = "12384bb9-15a7-4fa4-b106-89d3fd03cafd"
